--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -2,7 +2,7 @@ applications:
 - name: tracker-allocations
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
-  - route: allocations-pal-tracker-distributed-ckrishn7.apps.chicken.pal.pivotal.io
+  - route: allocations-pal-tracker-distributed-ckrishn7.apps.pikes.pal.pivotal.io
   memory: 1G
   instances: 1
   env:
