--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ buildscript {
         springBootVersion = "1.5.7.RELEASE"
         springVersion = "4.3.8.RELEASE"
         mysqlVersion = "6.0.6"
+        //{"git":{"commit":{"time":1519034739000,"id":"c206acd"},"branch":"HEAD"},"build":{"version":"1.5.2-build.9","artifact":"spring-cloud-service-broker","name":"service-broker","group":"io.pivotal.spring.cloud","time":1519038102000}}
+        springCloudDependenciesVersion = "Edgware.RELEASE"
+        springCloudServicesVersion = "1.6.4.RELEASE"
+
     }
 
     repositories {
