--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -5,7 +5,8 @@ applications:
   - route: backlog-pal-tracker-distributed-ckrishn7.apps.pikes.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-tracker-distributed-ckrishn7.apps.pikes.pal.pivotal.io
+#  env:
+#    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-tracker-distributed-ckrishn7.apps.pikes.pal.pivotal.io
   services:
   - tracker-backlog-database
+  - tracker-service-registry
